# Soft80

./: CMakeLists.txt  README.md
include/: decoder.h  devicemap.h  interruptingdevice.h  memorymap.h  registers.h  soft80.h  terminaldevice.h  util.h
source/: decoder.cpp  main.cpp  registers.cpp  soft80.cpp  util.cpp
tests/: hello.s  int0_tty.s  int1_tty.s  int2_tty.s  nmi_tty.s  timer.s
